<resources>
    <string name="app_name" translatable="false">NoteStash</string>

    <!-- GenericLoadingView -->
    <string name="view_generic_loading_info">Loading data…</string>

    <!-- GenericErrorView -->
    <string name="view_generic_error_info">Something went wrong!</string>

    <!-- NoteEditFragment -->
    <string name="fragment_note_edit_hint_title">Title</string>
    <string name="fragment_note_edit_hint_content">Note</string>

    <!-- NoteEditDeletionConfirmationDialogFragment -->
    <string name="fragment_note_edit_deletion_confirmation_dialog_title">Delete Note?</string>
    <string name="fragment_note_edit_deletion_confirmation_dialog_msg">Are you sure you want to delete this note?</string>
    <string name="fragment_note_edit_deletion_confirmation_dialog_positive_button_text">Delete</string>
    <string name="fragment_note_edit_deletion_confirmation_dialog_negative_button_text">@android:string/cancel</string>

    <!-- NoteOverviewFragment -->
    <string name="fragment_note_overview_empty_list_info">No notes available yet</string>
    <string name="fragment_note_overview_button_add_note_description">Add note</string>
    <string name="fragment_note_overview_restore_message">Note deleted</string>
    <string name="fragment_note_overview_restore_action_text">Undo</string>
    <string name="fragment_note_overview_restore_retry_message">Failed to restore note</string>
    <string name="fragment_note_overview_restore_retry_action_text">Try again</string>
    <string name="fragment_note_overview_deletion_failure_message">Failed to delete note</string>

    <!-- NoteOverviewMenu -->
    <string name="menu_note_overview_item_sort">Sort</string>

    <!-- NoteEditMenu -->
    <string name="menu_note_edit_item_delete">Delete</string>

    <!-- NoteOverviewSortDialogFragment -->
    <string name="fragment_note_overview_sort_dialog_title_sort_by">Sort by</string>
    <string name="fragment_note_overview_sort_dialog_radio_button_sort_by_title">Title</string>
    <string name="fragment_note_overview_sort_dialog_radio_button_sort_by_created">Created at</string>
    <string name="fragment_note_overview_sort_dialog_radio_button_sort_by_modified">Modified at</string>

    <string name="fragment_note_overview_sort_dialog_title_sort_order">Sort order</string>
    <string name="fragment_note_overview_sort_dialog_radio_button_sort_order_ascending">Ascending</string>
    <string name="fragment_note_overview_sort_dialog_radio_button_sort_order_descending">Descending</string>
</resources>