<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.overview.NoteOverviewFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways"
            app:menu="@menu/menu_note_overview_toolbar"
            app:title="@string/app_name" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/note_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="true"
        android:paddingHorizontal="@dimen/tiny_spacing"
        android:scrollbarStyle="outsideOverlay"
        android:scrollbars="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        tools:itemCount="16"
        tools:listitem="@layout/fragment_note_overview_list_item"
        tools:visibility="visible" />

    <include
        android:id="@+id/loading_view"
        layout="@layout/view_generic_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:visibility="gone" />

    <include
        android:id="@+id/error_view"
        layout="@layout/view_generic_error"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/empty_list_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="gone">

        <ImageView
            android:id="@+id/empty_list_image"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:contentDescription="@null"
            app:srcCompat="@drawable/ic_baseline_edit_note_24" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/empty_list_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_note_overview_empty_list_info"
            android:textAppearance="@style/TextAppearance.Material3.LabelLarge" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_note_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/small_spacing"
        android:contentDescription="@string/fragment_note_overview_button_add_note_description"
        app:layout_behavior="com.google.android.material.floatingactionbutton.FloatingActionButton$Behavior"
        app:srcCompat="@drawable/ic_outline_note_add_24" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>