...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/tiny_spacing"
        tools:visibility="visible">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
            android:textStyle="bold"
            tools:text="Title" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="5"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
            tools:text="Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet." />

...
